fixed word-wrap in css

--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -6,7 +6,7 @@ $main-font: 'Montserrat', sans-serif;
 *{
     font-family: $main-font;
     letter-spacing: -.5px;
-    word-wrap: n;
+    word-wrap: break-word;
     
 }
 
